@@ -1,3 +1,8 @@
+2014-02-09  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/59026
+	* gfortran.dg/elemental_by_value_1.f90 : New test
+
 2014-02-08  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/58470
